[project]
name = "trend-range"
version = "0.0.1"
description = "期货趋势跟踪 / 震荡 / 综合策略实证研究（基于 ssquant）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "tushare",      # 主力连续·后复权 K 线构建（k_data.db 数据源）；需账号 + 2000 积分
    "statsmodels",  # TSMOM 面板回归的 HAC（Newey-West）/ cluster 标准误
    "plotly",       # data_viz 交互式图表
]

# 可选依赖：用 pip 的 extras 语法安装，如 pip install -e .[bigquant]
# 注意 bigquant 需要 Python 3.11 + 它的私有源，故单独成组、非默认安装。
# 安装命令（需用 BigQuant 源）：
#   pip install -e .[bigquant] -i https://pypi.bigquant.com/simple/
[project.optional-dependencies]
bigquant = [
    "bigquant",  # BigQuant SDK（数据查询 DAI / 本地回测）；需 Python 3.11 + 私有源
]
ssquant = [
    "requests",  # ssquant 远程 data_server 取数用。ssquant 本体是 git submodule
                 # （本地 ./ssquant，非 PyPI 包），extras 无法自动装，需手动：
                 #   pip install -e ./ssquant   （它会带 akshare 等其余传递依赖）
]
pandadata = [
    "panda_data",  # Pandadata SDK（行情/因子/宏观数据）；需账号 + init_token 鉴权
    "duckdb",      # 本地 Parquet 仓库查询视图（hs300_post_daily 等）
]
claude = [
    "claude-agent-sdk",  # Claude Agent SDK（价格指标分解智能体等）；pip install -e .[claude]
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# 自动发现本项目自有的包；ssquant 作为子模块单独 pip install -e ./ssquant
# 新增 trend_following/oscillation/combined 等目录会自动被发现，无需改这里
[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "trend_following*", "oscillation*", "combined*"]
exclude = ["ssquant*", "tests*", "docs*", "data_cache*"]
