[project]
name = "skill-time-series-model"
version = "0.1.0"
description = "QuantSkills time-series modeling skill: two-stage diagnostic-driven ARMA/ARFIMA + GARCH/GJR-GARCH"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arch",
    "matplotlib",
    "numpy",
    "pandas",
    "pmdarima>=2.1.1",
    "scipy",
    "statsmodels",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
    "pyyaml>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B905", "SIM108", "B028"]
